    work!)

  - Enabled querying actions from workflow tool in absence
    of actions tool (Tracker #401).

  - Added 'operator' attribute to CMFTopic.ListCriterion, to permit
    specifying an operator ('and', for the most part) for indexes which
    support it, e.g., KeywordIndex (Tracker #442).

  - Added ZMI interface for editing Link URL (Tracker #364).

 Bugs Fixed

  - Added external method update_catalogIndexes.py to run as part of a
    upgrade to CMFs migrating to Zope2.4+ from from CMF sites which were built
    using Zope2.3 catalog

  - Use ID to label Favorite when target has an empty Title (Tracker #440).

  - Allowed sub-folders to have different syndication properties 
    than parents (Tracker #421).

  - Added 'CMFDefault.Upgrade.upgrade_decor_skins' external method to
    convert existing sites which had installed skin directories from the
    now-deprecated 'CMFDecor' product (Tracker #434).  Added note
    explaining the issue, and the workaround, to 'ISSUES.txt'.

  - Ensure that Favorites display the correct, absolute URL to their
    target, without needing to have <base> tag set (Tracker #419).

  - Worked around Opera's strange insistence on selecting an option,
    even for multi-select lists (Tracker #332).

  - Hardened CMFCore to initialize correctly in the absence of
    the PageTemplates product (Tracker #430).

  - Restored slot in <head> of ZPT main template into which content
    can insert the <base> tag (Tracker #418).

  - Fixed 'CMFTopic.SimpleIntegerCriterion.edit' to require a pair
    of values when 'direction' is 'min:max';  updated skins to use
    new 'getValueString', which renders such values properly
    (Tracker #439).

  - Ensured that Documents created with initial STX get cooked
    (Tracker #435).

  - Made links emitted by 'topic_view' play nice with virtual hosting
    (Tracker #433).

  - Made 'CMFCore/interfaces/__init__.py' non-empty, to remove suspicion