@@ -17,6 +17,11 @@
 
  Bugs Fixed
 
+  - Cleaned up emission of RFC822-style headers (Tracker #407),
+    terminating eaders must be terminated with CRLF, and padding
+    continuation lines (for values with embedded newlines) with
+    leading whitespace).
+
   - Added external method update_catalogIndexes.py to run as part of a
     upgrade to CMFs migrating to Zope2.4+ from from CMF sites which were built
     using Zope2.3 catalog
